5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1637_1054.log
== TEST (2019-04-09 18:47:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
px = float(input(("Digite a coordenada x: "))
py = float(input(("Digite a coordenada y: "))
			  
if(2 * px + py == 3):
  print("ponto pertence a reta")
else:
  print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 5
    py = float(input(("Digite a coordenada y: "))
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:48:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
px = float(input(("Digite a coordenada x: "))
py = float(input(("Digite a coordenada y: "))
			  
if(2 * px + py == 3):
  print("ponto pertence a reta")
else:
  print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 5
    py = float(input(("Digite a coordenada y: "))
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:48:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
x = float(input(("Digite a coordenada x: "))
y = float(input(("Digite a coordenada y: "))
			  
if(2 * px + py == 3):
  print("ponto pertence a reta")
else:
  print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 5
    y = float(input(("Digite a coordenada y: "))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:49:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
px = float(input("Digite a coordenada x: "))
py = float(input("Digite a coordenada y: "))
			  
if(2 * px + py == 3):
  print("ponto pertence a reta")
else:
  print("ponto nao pertence a reta")
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:49:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
px = float(input("Digite a coordenada x: "))
py = float(input("Digite a coordenada y: "))
			  
if(2 * px + py == 3):
  print("ponto pertence a reta")
else:
  print("ponto nao pertence a reta")
-- EXECUTION TIME:
0.140031
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
